--- a/www/css/canvas.css
+++ b/www/css/canvas.css
@@ -50,11 +50,9 @@ a.link-button:active, a.link-button:hover, a.link-button:focus {
 .quote p {
   text-indent: 0em; }
 
-@media (min-width: 768px) {
-  #main-article > section:nth-child > div.primary {
-    /*width: 50%;*/ }
-  #site-header > div > div.band > div > div > div.secondary {
-    /*width: 50%;*/ } }
+@media (max-width: 768px) {
+  .mobile-hidden {
+    display: none; } }
 
 #notification i {
   padding-right: 5px;
