--- a/www/sass/canvas.scss
+++ b/www/sass/canvas.scss
@@ -22,7 +22,8 @@
 
 div.card  div.node{
     border-bottom: 1px solid #ebebeb;
-    padding-bottom: 3em;
+    padding-bottom: 1em;
+    /*psw changed from 3em */
 }
 
 div.spotlight  div.card {
@@ -42,8 +43,9 @@ div.spotlight  div.card {
     background-size: contain;                  
     /*background-image: url('./images/cti/canvas transparentlogo3.png');*/
     background-repeat:   no-repeat;
-    background-position: -200px;       
-    margin-bottom: 1.5em;       
+    background-position: -200px; 
+    /* changed psw bottom margin */      
+    margin-bottom: 4em;       
 }
 
 a.link-button{
@@ -69,4 +71,7 @@ a.link-button:active, a.link-button:hover, a.link-button:focus{
 #notification i  {
     padding-right: 5px;
     font-size: 1.2em;
+}
+.content-block {
+    margin: 0px 0 0em !important;
 }
