--- a/www/sass/cti.scss
+++ b/www/sass/cti.scss
@@ -1463,6 +1463,8 @@ body.home > .band[role='complementary'] .primary {
 }
 
 /* Homepage */
+
+/* psw remove 
 .banner-flex:before {
 	content: '';
 	position: absolute;
@@ -1472,6 +1474,7 @@ body.home > .band[role='complementary'] .primary {
 	width: 50%;
 	background: #cce0e6;
 }
+*/
 .quote {
 	margin: 0 0 4em;
 }
