--- a/www/sass/canvas.scss
+++ b/www/sass/canvas.scss
@@ -10,6 +10,14 @@
 
 }
 
+#notification{
+    font-size: 17px;
+}
+
+.black-text{
+    color: #000 !important;
+}
+
 #notification > div{
     margin-bottom: 10px;
 }
