--- a/www/sass/canvas.scss
+++ b/www/sass/canvas.scss
@@ -82,7 +82,7 @@ a.link-button:active, a.link-button:hover, a.link-button:focus{
     }   
 } 
 
-#notification i  {
+#notification span  {
     padding-right: 5px;
     font-size: 1.2em;
 }
